@@ -82,7 +82,8 @@ export(rk.screen.device)
 export(rk.select.CRAN.mirror)
 export(rk.select.list)
 export(rk.sessionInfo)
-export(.rk.set.invalid.field)
+export(.rk.set.levels)
+export(.rk.set.invalid.fields)
 export(rk.set.label)
 export(.rk.set.meta)
 export(rk.set.output.html.file)
